--- a/spicetify-viz/package.json
+++ b/spicetify-viz/package.json
@@ -11,7 +11,12 @@
   "devDependencies": {
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "spicetify-creator": "^1.0.17"
+    "@vitejs/plugin-react": "^4.6.0",
+    "@vitest/ui": "^3.2.4",
+    "happy-dom": "^18.0.1",
+    "jsdom": "^26.1.0",
+    "spicetify-creator": "^1.0.17",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@types/three": "^0.177.0",
